--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -68,38 +68,38 @@ CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
 am__objects_1 = analyzedlg.$(OBJEXT) audio.$(OBJEXT) \
-	autodiagsdlg.$(OBJEXT) board.$(OBJEXT) clockview.$(OBJEXT) \
-	dbdialog.$(OBJEXT) edit_analysis.$(OBJEXT) evalgraph.$(OBJEXT) \
-	figuredlg.$(OBJEXT) goboard.$(OBJEXT) gogame.$(OBJEXT) \
-	gamedialog.$(OBJEXT) gamestable.$(OBJEXT) gametree.$(OBJEXT) \
-	grid.$(OBJEXT) greeterwindow.$(OBJEXT) helpviewer.$(OBJEXT) \
-	igsconnection.$(OBJEXT) imagehandler.$(OBJEXT) main.$(OBJEXT) \
-	clientwin.$(OBJEXT) mainwindow.$(OBJEXT) misc.$(OBJEXT) \
-	msg_handler.$(OBJEXT) multisave.$(OBJEXT) parser.$(OBJEXT) \
-	playertable.$(OBJEXT) preferences.$(OBJEXT) qgo.$(OBJEXT) \
-	qgo_interface.$(OBJEXT) qgtp.$(OBJEXT) newaigamedlg.$(OBJEXT) \
-	setting.$(OBJEXT) sgfload.$(OBJEXT) sgf2board.$(OBJEXT) \
-	sgfpreview.$(OBJEXT) slideview.$(OBJEXT) svgbuilder.$(OBJEXT) \
-	tables.$(OBJEXT) telnet.$(OBJEXT) textview.$(OBJEXT) \
-	timing.$(OBJEXT) variantgamedlg.$(OBJEXT)
+	autodiagsdlg.$(OBJEXT) board.$(OBJEXT) clientwin.$(OBJEXT) \
+	clockview.$(OBJEXT) dbdialog.$(OBJEXT) edit_analysis.$(OBJEXT) \
+	evalgraph.$(OBJEXT) figuredlg.$(OBJEXT) gamedialog.$(OBJEXT) \
+	gamestable.$(OBJEXT) gametree.$(OBJEXT) goboard.$(OBJEXT) \
+	gogame.$(OBJEXT) grid.$(OBJEXT) greeterwindow.$(OBJEXT) \
+	helpviewer.$(OBJEXT) igsconnection.$(OBJEXT) \
+	imagehandler.$(OBJEXT) main.$(OBJEXT) mainwindow.$(OBJEXT) \
+	misc.$(OBJEXT) msg_handler.$(OBJEXT) multisave.$(OBJEXT) \
+	newaigamedlg.$(OBJEXT) parser.$(OBJEXT) playertable.$(OBJEXT) \
+	preferences.$(OBJEXT) qgo.$(OBJEXT) qgo_interface.$(OBJEXT) \
+	qgtp.$(OBJEXT) setting.$(OBJEXT) sgfload.$(OBJEXT) \
+	sgf2board.$(OBJEXT) sgfpreview.$(OBJEXT) slideview.$(OBJEXT) \
+	svgbuilder.$(OBJEXT) tables.$(OBJEXT) telnet.$(OBJEXT) \
+	textview.$(OBJEXT) timing.$(OBJEXT) variantgamedlg.$(OBJEXT)
 am__objects_2 =
 am_q5go_OBJECTS = $(am__objects_1) $(am__objects_2)
 am__objects_3 = tutorial.$(OBJEXT)
 am__objects_4 = analyzedlg.moc.$(OBJEXT) audio.moc.$(OBJEXT) \
 	autodiagsdlg.moc.$(OBJEXT) bitarray.moc.$(OBJEXT) \
-	board.moc.$(OBJEXT) clickableviews.moc.$(OBJEXT) \
-	clockview.moc.$(OBJEXT) dbdialog.moc.$(OBJEXT) \
-	edit_analysis.moc.$(OBJEXT) evalgraph.moc.$(OBJEXT) \
-	figuredlg.moc.$(OBJEXT) gamedialog.moc.$(OBJEXT) \
-	gamestable.moc.$(OBJEXT) gametree.moc.$(OBJEXT) \
-	greeterwindow.moc.$(OBJEXT) helpviewer.moc.$(OBJEXT) \
-	igsconnection.moc.$(OBJEXT) mainwindow.moc.$(OBJEXT) \
-	clientwin.moc.$(OBJEXT) miscdialogs.moc.$(OBJEXT) \
+	board.moc.$(OBJEXT) clientwin.moc.$(OBJEXT) \
+	clickableviews.moc.$(OBJEXT) clockview.moc.$(OBJEXT) \
+	dbdialog.moc.$(OBJEXT) edit_analysis.moc.$(OBJEXT) \
+	evalgraph.moc.$(OBJEXT) figuredlg.moc.$(OBJEXT) \
+	gamedialog.moc.$(OBJEXT) gamestable.moc.$(OBJEXT) \
+	gametree.moc.$(OBJEXT) greeterwindow.moc.$(OBJEXT) \
+	helpviewer.moc.$(OBJEXT) igsconnection.moc.$(OBJEXT) \
+	mainwindow.moc.$(OBJEXT) miscdialogs.moc.$(OBJEXT) \
 	msg_handler.moc.$(OBJEXT) multisave.moc.$(OBJEXT) \
-	normaltools.moc.$(OBJEXT) scoretools.moc.$(OBJEXT) \
-	parser.moc.$(OBJEXT) playertable.moc.$(OBJEXT) \
-	preferences.moc.$(OBJEXT) qgo.moc.$(OBJEXT) \
-	qgo_interface.moc.$(OBJEXT) qgtp.moc.$(OBJEXT) \
+	normaltools.moc.$(OBJEXT) parser.moc.$(OBJEXT) \
+	playertable.moc.$(OBJEXT) preferences.moc.$(OBJEXT) \
+	qgo.moc.$(OBJEXT) qgo_interface.moc.$(OBJEXT) \
+	qgtp.moc.$(OBJEXT) scoretools.moc.$(OBJEXT) \
 	sizegraphicsview.moc.$(OBJEXT) slideview.moc.$(OBJEXT) \
 	sgfpreview.moc.$(OBJEXT) tables.moc.$(OBJEXT) \
 	telnet.moc.$(OBJEXT) textview.moc.$(OBJEXT) \
@@ -283,31 +283,56 @@ top_srcdir = @top_srcdir@
 INCLUDES = $(all_includes)
 q5go_METASOURCES = AUTO
 KDE_OPTIONS = qtonly
-DISTHEADERS_MOC = analyzedlg.h audio.h autodiagsdlg.h bitarray.h board.h clickableviews.h clockview.h dbdialog.h \
-	edit_analysis.h evalgraph.h figuredlg.h gamedialog.h gamestable.h gametree.h greeterwindow.h \
-	helpviewer.h igsconnection.h mainwindow.h clientwin.h miscdialogs.h msg_handler.h multisave.h \
-	normaltools.h scoretools.h parser.h playertable.h preferences.h qgo.h qgo_interface.h qgtp.h \
-	sizegraphicsview.h slideview.h sgfpreview.h tables.h telnet.h textview.h tutorial.h variantgamedlg.h
+DISTHEADERS_MOC = analyzedlg.h audio.h autodiagsdlg.h \
+	bitarray.h board.h \
+	clientwin.h clickableviews.h clockview.h \
+	dbdialog.h \
+	edit_analysis.h evalgraph.h \
+	figuredlg.h \
+	gamedialog.h gamestable.h gametree.h greeterwindow.h \
+	helpviewer.h igsconnection.h \
+	mainwindow.h miscdialogs.h msg_handler.h multisave.h \
+	normaltools.h \
+	parser.h playertable.h preferences.h \
+	qgo.h qgo_interface.h qgtp.h \
+	scoretools.h sizegraphicsview.h slideview.h sgfpreview.h \
+	tables.h telnet.h textview.h tutorial.h \
+	variantgamedlg.h
 
 DISTHEADERS_NOMOC = goboard.h config.h defines.h grid.h goboard.h gogame.h gs_globals.h \
 	imagehandler.h komispinbox.hm isc.h newaigamedlg.h setting.h sgf.h sgfparser.h \
 	svgbuilder.h timing.h ui_helpers.h
 
-DISTSOURCES = analyzedlg.cpp audio.cpp autodiagsdlg.cpp board.cpp clockview.cpp dbdialog.cpp edit_analysis.cpp \
-		evalgraph.cpp figuredlg.cpp goboard.cc gogame.cc gamedialog.cpp gamestable.cpp gametree.cpp \
-		grid.cpp greeterwindow.cpp helpviewer.cpp igsconnection.cpp imagehandler.cpp main.cpp \
-		clientwin.cpp mainwindow.cpp \
-		misc.cpp msg_handler.cpp multisave.cpp parser.cpp \
-		playertable.cpp preferences.cpp qgo.cpp qgo_interface.cpp qgtp.cpp \
-		newaigamedlg.cpp setting.cpp  sgfload.cc sgf2board.cc sgfpreview.cpp \
-		slideview.cpp svgbuilder.cpp tables.cpp telnet.cpp textview.cpp timing.cpp variantgamedlg.cpp
+DISTSOURCES = analyzedlg.cpp audio.cpp autodiagsdlg.cpp \
+	board.cpp \
+	clientwin.cpp clockview.cpp \
+	dbdialog.cpp \
+	edit_analysis.cpp evalgraph.cpp \
+	figuredlg.cpp \
+	gamedialog.cpp gamestable.cpp gametree.cpp goboard.cc gogame.cc \
+	grid.cpp greeterwindow.cpp \
+	helpviewer.cpp \
+	igsconnection.cpp imagehandler.cpp \
+	main.cpp mainwindow.cpp misc.cpp msg_handler.cpp multisave.cpp \
+	newaigamedlg.cpp \
+	parser.cpp playertable.cpp preferences.cpp \
+	qgo.cpp qgo_interface.cpp qgtp.cpp \
+	setting.cpp sgfload.cc sgf2board.cc sgfpreview.cpp slideview.cpp svgbuilder.cpp \
+	tables.cpp telnet.cpp textview.cpp timing.cpp \
+	variantgamedlg.cpp
 
-FORMS = analyze_gui.ui autodiags_gui.ui boardwindow_gui.ui clientwindow_gui.ui dbdialog_gui.ui edit_analysis_gui.ui \
-	enginedlg_gui.ui figuredlg_gui.ui gameinfo_gui.ui gui_dialog.ui greeterwindow_gui.ui multisave_gui.ui \
-	newgame_gui.ui newlocalgame_gui.ui newvariantgame_gui.ui \
-	normaltools_gui.ui nthmove_gui.ui preferences_gui.ui newaigamedlg_gui.ui scoretools_gui.ui \
-	slideshow_gui.ui slideview_gui.ui slideshow_gui.ui svgview_gui.ui sgfpreview.ui talk_gui.ui \
-	textedit_gui.ui textview_gui.ui tutorial.cpp twoaigamedlg_gui.ui
+FORMS = analyze_gui.ui autodiags_gui.ui \
+	boardwindow_gui.ui \
+	clientwindow_gui.ui dbdialog_gui.ui \
+	edit_analysis_gui.ui enginedlg_gui.ui \
+	figuredlg_gui.ui \
+	gameinfo_gui.ui gui_dialog.ui greeterwindow_gui.ui \
+	multisave_gui.ui \
+	newaigamedlg_gui.ui newgame_gui.ui newlocalgame_gui.ui newvariantgame_gui.ui \
+	normaltools_gui.ui nthmove_gui.ui \
+	preferences_gui.ui \
+	scoretools_gui.ui sgfpreview.ui slideshow_gui.ui slideview_gui.ui slideshow_gui.ui svgview_gui.ui \
+	talk_gui.ui textedit_gui.ui textview_gui.ui tutorial.cpp twoaigamedlg_gui.ui
 
 RESOURCES = q4go.qrc
 FORMHEADERS = $(FORMS:%.ui=ui_%.h)
